# cz-mqtt

./: .gitignore  client  client.c  listener  meson.build  pollclient.c  pollserver.c  server  server.c
.cache/clangd/index/: main.h.F14A9F4201A09412.idx  minunit.h.8D8AA18C64DE1AEA.idx  msgpack.c.3AE5594462D7722D.idx  pollclient.c.8965B70D228EFDF1.idx  pollserver.c.2961BD7E297D2A0A.idx  test.c.BE1DCF643F4559E8.idx  test_main.c.54AC8C218CA683CD.idx  unity.c.57F2C4F0832058AA.idx  unity.h.700911BB5E65622F.idx  unity_internals.h.A0A01BAA85DA5C9E.idx
chatServer/: client.c  listener.c  talker  talker.c
mqtt-frontend/: package-lock.json  package.json
mqtt-frontend/src/: App.tsx
src/: main.c  main.h  mqtt.c  mqtt.h  mqtt_packet_utils.c  mqtt_packet_utils.h  network.c  network.h  pack.h
tests/: mqtt.c  msgpack.c  packet_utils.c  test_main.c
